# Arai

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DESIGN.md  README.md  TASKS.md  package.json
.github/: pull_request_template.md
bots/: README.md  __init__.py  _common.py  marketing_bot.py  ops_bot.py  sales_bot.py
docs/: AGENT-NOTES.md  ARCHITECTURE.md  BONUS-GROWTH.md  BONUS-PLAN.md  DEMO.md  EVIDENCE-SCHEMA.md  HACKATHON-AUDIT.md  MARKETING.md  MCP-SETUP.md  MCP-TOOLS.md  MOBILE-PERFORMANCE.md  PITCH-CHEATSHEET.md  PITCH-DECK.md  PITCH-GLASSES.txt  PLAN.md  PRODUCTION-PATH.md  PRODUCTION-READINESS.md  SELF-EVAL.md  SUBMISSION.md  pitch.html
evidence/: T-004-cc-mcp-smoke.txt  e2e-sample.jsonl  food-truck-route-sample.json  food-truck-route-sample.md  food-truck-route-smoke.md  growth-bonus-smoke.md  (+8 more)
orchestrator/: README.md  claude_runner.py  customers.py  daily_report.py  dispatcher.py  env.py  evidence.py  food_truck_route.py  growth.py  health.py  main.py  mcp_client.py  pyproject.toml  referrals.py  requirements.txt  scenario.py  telegram_bot.py  webhook_server.py
orchestrator/fixtures/: food_truck_customers.json
orchestrator/handlers/: __init__.py  abandoned.py  gmb.py  instagram.py  kitchen.py  marketing.py  square.py  whatsapp.py
orchestrator/tests/: test_claude_runner.py  test_customers.py  test_daily_report.py  test_dispatcher.py  test_evidence.py  test_food_truck_route.py  test_gmb_handler.py  test_growth.py  test_health.py  test_mcp_client.py  test_referrals.py  test_square_capacity.py  test_webhook_server.py  test_whatsapp_growth.py
(+120 files in other folders)
