[project]
name = "arai-orchestrator"
version = "0.1.0"
description = "Scenario-driven orchestrator spine for the Happy Cake hackathon submission."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-telegram-bot>=21.6",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
arai-orchestrator = "orchestrator.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
